--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 
     implementation Deps.appCompat
     implementation Deps.constraintLayout
+    implementation Deps.recyclerView
+    implementation Deps.cardView
 
     implementation Deps.dagger
     kapt Deps.daggerCompiler
